compiler/testData/diagnostics/tests/declarationChecks/propertyInPackageHasNoInheritVisibility.kt
package d

<!ILLEGAL_MODIFIER!>override<!> val f : ()-> Int = { 12 }

fun test() {
    f()
}